# video-source-balancer

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.performance  Dockerfile.tests  docker-compose-performance-test.yaml  docker-compose-tests.yaml  docker-compose.yaml
src/: main.py
src/api/: dependencies.py
src/api/balancer/: __init__.py  endpoints.py
src/api/balancer_config/: __init__.py  endpoints.py  schemas.py
src/buisness_logic/: balancer.py
src/core/: database.py  settings.py
src/crud/: __init__.py  crud.py  schemas.py
src/migrations/: init_database.py
tests/: test_buisness_logic.py  test_crud.py
tests/performance/: locustfile.py
